Bug 167704 - [25.8.0 RC2] Themes in the Gallery are no longer translated
Summary: [25.8.0 RC2] Themes in the Gallery are no longer translated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium trivial
Assignee: Christian Lohmaier
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: notBibisectable, regression
Depends on:
Blocks: LibreOffice-Themes
  Show dependency treegraph
 
Reported: 2025-07-28 19:42 UTC by Dini
Modified: 2025-10-20 09:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dini 2025-07-28 19:42:14 UTC
In 25.8.0 RC2 all themes in the Gallery (Arrows, BPMN, Bullets, etc) are displayed in English despite being translated in Weblate. In 25.2 and older this issue does not appear.
Comment 1 Buovjaga 2025-10-09 18:52:33 UTC
I don't see how this is bibisectable in a simple way. The generated translation files should be checked first.
Comment 2 Escuelas Linux 2025-10-16 03:19:31 UTC
I can confirm that the issue is still present on the 25.8.2.2 release. I copied the gallery folder from 25.2 to 25.8 to see if it was due to some untranslated strings. However, even when using the 25.2 gallery, the names of the themes appear in English, even though they should appear in Spanish in my case, as they did in 25.2.
Comment 3 Christian Lohmaier 2025-10-17 11:54:08 UTC
regression from some minor refactoring, fix here:
https://gerrit.libreoffice.org/c/core/+/192573
Comment 4 Commit Notification 2025-10-19 19:15:28 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/961439e8e6f7a5a179bcdd092254dd1f32a1c7c5

tdf#167704 fix gallery themes not using translations

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-10-19 21:57:45 UTC
Christian Lohmaier committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e05e6af1ee3af91ed59da5c30fbd38e12d1f3c37

tdf#167704 fix gallery themes not using translations

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Christian Lohmaier 2025-10-20 09:38:06 UTC
submitted to relevant branches → set to fixed