tdf#167704 fix gallery themes not using translations

regression from d81808ec15064e7655503253dddb8ebdc58b1b29

it is not substr(startPos, endPos) but substr(startPos, length)
so the code ended up with the whole remainder of the key: 'langCode]'
instead of just 'langCode' and that broke the lookup.

Change-Id: I33eddf566e2d453dff14c123fc6c8cda97382b2d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192573
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>